<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CF ADMIN</string>
    <string name="save_">حفظ</string>
    <string name="name">الإسم :</string>
    <string name="code">الرمز :</string>
    <string name="phone">الهاتف :</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="myOrders">طلباتي</string>
    <string name="bay">شراء</string>
    <string name="product">المنتج</string>
    <string name="whight">الوزن</string>
    <string name="order_nb">رقم الطلب</string>
    <string name="order_date">تاريخ الطلب :</string>
    <string name="order_count"> المطلوبة</string>
    <string name="order_talif">الكمية التالفة :</string>

    <string name="talif">  التالفة</string>
    <string name="welcome">مرحبا !</string>
    <string name="order_details">قم بارسال تفاصيل طلبك</string>
    <string name="cancel">إلغاء</string>
    <string name="checkout_amount">المبلغ المستلم</string>
    <string name="checkout_txt">استلام مبلغ من العميل</string>
    <string name="Myusers">عملائي</string>
    <string name="add_procudts">إضافة منتج جديد !</string>
    <string name="add_details">قم باضافة تفاصيل المنتج</string>
    <string name="price">الثمن :</string>
    <string name="delete">حذف</string>
    <string name="exec">عذرا</string>
    <string name="delete_text">هل انت متأكد أنك تريد حذف هذا العنصر</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">تسجيل الدخول</string>
    <string name="email">البريد الالكتروني</string>
    <string name="noItem">لا يوجد عناصر</string>
    <string name="gomap">تتبع</string>
    <string name="edite_compt"> معلومات حساب المسؤول</string>
    <string name="psw">كلمة السر</string>
    <string name="repsw">اعد كتابة كلمة السر</string>
    <string name="notify_key">AAAApjtuPOA:APA91bHG2YgmrdJhggyDnNa8J-d3RS9YZP3-lBKkvMuKhuVtkpcaVnm7w-z7OVMTM6npcy17r4la-_3DaNIAswba9sUI6dBsAQSP56hzcdz15REobSNTcoL8WUxeu82R9SVX_GAB_0Fu</string>
    <string name="ur_order_dane"> تم توصيل الطلب اليك وبرجاء في  حالة عدم الاستلام الاتصال بنا ونشكرك على تعاملك معنا</string>
    <string name="ur_order_accept">تم قبول طلبك بنجاح سنقوم بتوصيله اليك قريبا </string>
    <string name="ur_order_delete">نأسف لاعلامك انه تم حذف طلبك</string>
    <string name="pay">دفع</string>
    <string name="wallet">الدين</string>
    <string name="production">حركة الإنتاج</string>
    <string name="production1"> المنتجة</string>
    <string name="date">التاريخ</string>
    <string name="production_txt">إنتاج كمية جديدة</string>
    <string name="All_orders">كل الطلبات</string>
    <string name="filter">تصفية</string>
    <string name="MAL">ادارة قائمة المسؤلين</string>
    <string name="checkout">اضافة الدفع للمستخدمين</string>
    <string name="MO">ادارة قائمة الطلبات</string>
    <string name="block">حظر مستخدمين</string>
    <string name="Production">اضافة انتاج يومي</string>
    <string name="MPL">ادارة قائمة المنتجات</string>
    <string name="add_order">اضافة طلب</string>
    <string name="point">تحديد موعد التوصيل</string>
    <string name="pointDay">يوم الزيارة</string>
    <string name="indate">من تاريخ </string>
    <string name="todate">الى تاريخ </string>
    <string name="Point">تحديد يوم الزيارة</string>
    <string name="ur_req_succ">تم اضافة الطلب بنجاح</string>
    <array name="pointDay">
        <item>الكل</item>
        <item>السبت</item>
        <item>الأحد</item>
        <item>الإثنين</item>
        <item>الثلاثاء</item>
        <item>الإربعاء</item>
        <item>الخميس</item>
        <item>الجمعة</item>
    </array>
    <array name="orderType">
        <item>بإنتظار الموافقة</item>
        <item>الحالية</item>
        <item>المكتملة</item>
        <item>الملغية</item>
    </array>
</resources>
