<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bk_prod"
    android:layout_margin="5dp"
    android:padding="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<TextView
    android:id="@+id/t1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:text="@string/welcome"
    android:fontFamily="@font/saudi"
    android:textSize="26dp"
    android:textColor="#277C03"/>

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/edite_compt"
        android:fontFamily="@font/saudi"
        android:textSize="22dp"
        android:textColor="#414142"/>


    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:layout_width="350dp"
        android:gravity="right"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/t2"
       app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:hint="@string/email"
        android:fontFamily="@font/saudi"
        android:textSize="18dp"
        android:textColor="#3F51B5"/>
    <EditText
        android:inputType="textPersonName"
        android:id="@+id/user_name"
        android:layout_width="350dp"
        android:gravity="right"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:hint="@string/name"
        android:fontFamily="@font/saudi"
        android:textSize="18dp"
        android:textColor="#3F51B5"/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_width="350dp"
        android:gravity="right"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:hint="@string/psw"
        android:fontFamily="@font/saudi"
        android:textSize="18dp"
        android:textColor="#3F51B5"/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/repassword"
        android:layout_width="350dp"
        android:gravity="right"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:hint="@string/repsw"
        android:fontFamily="@font/saudi"
        android:textSize="18dp"
        android:textColor="#3F51B5"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:weightSum="2"
      android:orientation="horizontal"
      app:layout_constraintTop_toBottomOf="@+id/repassword"
      android:layout_marginTop="20dp">
      <Button
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:id="@+id/save"
          android:text="@string/save_"
          android:fontFamily="@font/saudi"
          android:textColor="@color/white"
          android:background="@drawable/bk_bay2"
          android:textSize="22dp"/>
      <Button
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:id="@+id/cancel"
          android:text="@string/cancel"
          android:fontFamily="@font/saudi"
          android:textColor="@color/white"
          android:background="@drawable/bk_cancel"
          android:textSize="22dp"/>

  </LinearLayout>
</LinearLayout>