<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bk_prod"

android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center">
<TextView
    android:id="@+id/t1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/exec"
    android:fontFamily="@font/saudi"
    android:textSize="20dp"
    android:textColor="#E91E63"/>

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_text"
        android:fontFamily="@font/saudi"
        android:textSize="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#414142"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:weightSum="2"
      android:orientation="horizontal"
      android:layout_marginTop="20dp">
      <Button
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:id="@+id/delete"
          android:text="@string/delete"
          android:fontFamily="@font/saudi"
          android:textColor="@color/white"
          android:background="@drawable/bk_bay3"
          android:textSize="18dp"/>
      <Button
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:id="@+id/cancel"
          android:text="@string/cancel"
          android:fontFamily="@font/saudi"
          android:textColor="@color/white"
          android:background="@drawable/bk_cancel"
          android:textSize="18dp"/>

  </LinearLayout>
</LinearLayout>