<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"

    android:background="#F1F0F0">
<android.support.constraint.ConstraintLayout
    android:layout_margin="3dp"
    android:padding="10dp"
    android:layout_marginBottom="30dp"
    android:background="@drawable/bk_cl"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent">
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@android:drawable/ic_menu_edit"
        android:id="@+id/edit_compt"
        />
    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintRight_toLeftOf="@+id/t1"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        app:layout_constraintRight_toLeftOf="@+id/t2"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintRight_toLeftOf="@+id/t3"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/t2"
        android:fontFamily="@font/saudi"/>

    <Button
android:padding="3dp"
        android:drawableLeft="@android:drawable/ic_menu_set_as"
        android:fontFamily="@font/saudi"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:background="@drawable/bk_button_logout"/>

    <Button
        android:id="@+id/Myusers"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bk_button_shape"
        android:drawableLeft="@android:drawable/ic_menu_myplaces"
        android:fontFamily="@font/saudi"
        android:padding="3dp"
        android:text="@string/Myusers"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout" />


</android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF5722"
        app:layout_constraintTop_toBottomOf="@+id/cl"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/line1"/>
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="@+id/line1">
      <android.support.constraint.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <android.support.constraint.ConstraintLayout
             app:layout_constraintTop_toTopOf="parent"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/bk_prod"
              android:layout_margin="5dp"
              android:padding="0dp"
              android:id="@+id/add_cl">
              <TextView
                  android:id="@+id/t11"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  android:text="@string/add_procudts"
                  android:fontFamily="@font/saudi"
                  android:textSize="26dp"
                  android:textColor="#277C03"/>

              <TextView
                  android:id="@+id/t22"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/t11"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  android:text="@string/add_details"
                  android:fontFamily="@font/saudi"
                  android:textSize="22dp"
                  android:textColor="#414142"/>
              <TextView
                  android:layout_marginRight="10dp"
                  android:id="@+id/t33"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/t22"
                  app:layout_constraintRight_toRightOf="parent"

                  android:text="@string/product"
                  android:fontFamily="@font/saudi"
                  android:textSize="24dp"
                  android:textColor="#3F51B5"
                  android:layout_marginTop="10dp"/>

              <EditText
                  android:id="@+id/prod_name"
                  android:layout_width="200dp"
                  android:gravity="right"
                  android:layout_marginRight="10dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/t22"
                  app:layout_constraintRight_toLeftOf="@+id/t33"

                  android:hint=" منتح 1"
                  android:fontFamily="@font/saudi"
                  android:textSize="24dp"
                  android:textColor="#3F51B5"/>
              <EditText
                  android:id="@+id/prod_weight"
                  android:layout_width="200dp"
                  android:gravity="right"
                  android:layout_marginRight="10dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/t33"
                  app:layout_constraintRight_toLeftOf="@+id/t4"

                  android:digits="1234567890."
                  android:hint=" 10 KG"
                  android:fontFamily="@font/saudi"
                  android:textSize="24dp"
                  android:textColor="#E91E63"/>
              <TextView
                  android:layout_marginRight="10dp"
                  android:id="@+id/t4"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/t33"
                  android:layout_marginTop="10dp"
                  app:layout_constraintRight_toRightOf="parent"

                  android:text="@string/whight"
                  android:fontFamily="@font/saudi"
                  android:textSize="24dp"
                  android:textColor="#E91E63"/>

              <EditText
                  android:id="@+id/price"
                  android:layout_width="200dp"
                  android:gravity="right"
                  android:layout_marginRight="10dp"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/t4"
                  app:layout_constraintRight_toLeftOf="@+id/t5"

                  android:digits="1234567890."
                  android:hint=" 100 EGP"
                  android:fontFamily="@font/saudi"
                  android:textSize="24dp"
                  android:textColor="#E91E63"/>
              <TextView
                  android:layout_marginRight="10dp"
                  android:id="@+id/t5"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@+id/t4"
                  android:layout_marginTop="10dp"
                  app:layout_constraintRight_toRightOf="parent"

                  android:text="@string/price"
                  android:fontFamily="@font/saudi"
                  android:textSize="24dp"
                  android:textColor="#E91E63"/>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  android:weightSum="2"
                  android:orientation="horizontal"
                  app:layout_constraintTop_toBottomOf="@+id/t5"
                  android:layout_marginTop="20dp">
                  <Button
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:id="@+id/save"
                      android:text="@string/save_"
                      android:fontFamily="@font/saudi"
                      android:textColor="@color/white"
                      android:background="@drawable/bk_bay2"
                      android:textSize="22dp"/>
                  <Button
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:id="@+id/cancel"
                      android:text="@string/cancel"
                      android:fontFamily="@font/saudi"
                      android:textColor="@color/white"
                      android:background="@drawable/bk_cancel"
                      android:textSize="22dp"/>

              </LinearLayout>
          </android.support.constraint.ConstraintLayout>

          <View
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:background="#FF5722"
              app:layout_constraintTop_toBottomOf="@+id/add_cl"
              android:layout_marginTop="10dp"
              app:layout_constraintRight_toRightOf="parent"
              android:id="@+id/line2"/>


          <ScrollView
              app:layout_constraintTop_toBottomOf="@+id/line2"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_width="match_parent"
              android:paddingBottom="50dp"
              android:layout_height="match_parent">
              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
                  <TextView
                      android:id="@+id/noItem"
                      android:visibility="gone"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/noItem"
                      android:fontFamily="@font/saudi"
                      android:textSize="20dp"
                      android:layout_centerInParent="true"
                      android:layout_alignParentTop="true"
                      android:layout_marginTop="20dp"/>
                  <ProgressBar
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:layout_alignParentTop="true"
                      android:layout_marginTop="10dp"
                      android:id="@+id/progress"

                      />

                  <android.support.v7.widget.RecyclerView
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:id="@+id/List_prod"
                      android:layout_marginBottom="100dp"></android.support.v7.widget.RecyclerView>

              </RelativeLayout>
          </ScrollView>
      </android.support.constraint.ConstraintLayout>
   </ScrollView>


</android.support.constraint.ConstraintLayout>