<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Production">
    <android.support.constraint.ConstraintLayout

        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp"
        android:background="@color/logo_color">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/saudi"
            android:textSize="22dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"/>


        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@android:drawable/ic_menu_close_clear_cancel"/>
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="4"
                >
                <TextView
                    android:gravity="right"

                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/saudi"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#494848"
                    android:layout_marginLeft="3dp"/>
                <TextView
                    android:gravity="right"

                    android:id="@+id/production"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/production1"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/saudi"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#494848"
                    android:layout_marginLeft="3dp"/>
                <TextView
                    android:gravity="right"

                    android:id="@+id/talef"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/talif"
                    app:layout_constraintRight_toLeftOf="@+id/production"
                    app:layout_constraintLeft_toRightOf="@+id/date"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/saudi"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#494848"
                    android:layout_marginLeft="3dp"/>
                <TextView
                    android:gravity="right"
                    android:id="@+id/order"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/order_count"
                    app:layout_constraintRight_toLeftOf="@+id/talef"
                    app:layout_constraintLeft_toRightOf="@+id/date"
                    android:layout_marginRight="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/saudi"/>
            </LinearLayout>

            <TextView
                android:id="@+id/noItem"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noItem"
                android:fontFamily="@font/saudi"
                android:textSize="20dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"/>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:id="@+id/progress"


                />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp"
                android:layout_marginTop="50dp"
                android:id="@+id/RV"></android.support.v7.widget.RecyclerView>

        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>